Fix padding for multiple collapse information in list

--- a/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
+++ b/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
@@ -43,6 +43,7 @@
         .row-details-content {
             float: left;
             padding-right: 25px;
+            padding-bottom: 20px;
             vertical-align: top;
             overflow: hidden;
             text-overflow: ellipsis;
